--- a/.github/workflows/Itchio-deploy.yml
+++ b/.github/workflows/Itchio-deploy.yml
@@ -17,19 +17,32 @@ jobs:
         working-directory: PongGame/multiplayer
 
     steps:
-      - name: Checkout Code
-        uses: actions/checkout@v3
+      # Step to checkout code from the repository
+      - uses: actions/checkout@v3
+        name: Checkout Code
 
+      # Step to set up Go version
       - name: Setup Go
         uses: actions/setup-go@v4
         with:
-          go-version: 1.23.4 # Adjust to your project's Go versio
+          go-version: 1.23.4  # Ensure this is the version your project needs
 
+      # Step to install dependencies for Go
+      - name: Install Go dependencies
+        run: go mod tidy
+
+      # Step to build the Go application (will generate the `dist` directory)
+      - name: Build the game
+        run: |
+          mkdir -p dist   # Create the dist directory if it does not exist
+          go build -o dist/pong-game PongGame/multiplayer/main.go # Build output in `dist/`
+        
+      # Step to publish the build to Itch.io
       - name: Publish to Itch.io
         uses: manleydev/butler-publish-itchio-action@master
         env:
           BUTLER_CREDENTIALS: ${{ secrets.ITCHIO_API_KEY }}
-          CHANNEL: HTML
-          ITCH_GAME: pong-game
-          ITCH_USER: thisismemukul
-          PACKAGE: PongGame/multiplayer/dist
+          CHANNEL: HTML           # Change to your required channel
+          ITCH_GAME: pong-game    # Your Itch.io game name
+          ITCH_USER: thisismemukul     # Replace with your Itch.io username
+          PACKAGE: PongGame/multiplayer/dist  # The dist folder to be published
