--- a/.github/workflows/Itchio-deploy.yml
+++ b/.github/workflows/Itchio-deploy.yml
@@ -27,25 +27,22 @@ jobs:
         with:
           go-version: 1.23.4  # Ensure this is the version your project needs
 
-      # Step to install system dependencies (including ALSA, X11, Xrandr)
-      - name: Install system dependencies
+      # Step to install dependencies for Go and system libraries
+      - name: Install dependencies
         run: |
           sudo apt-get update
-          sudo apt-get install -y libasound2-dev libx11-dev libxrandr-dev pkg-config
-
-      # Step to install Go dependencies
-      - name: Install Go dependencies
-        run: go mod tidy
+          sudo apt-get install -y libxrandr-dev libx11-dev libgl1-mesa-glx # Added libgl1-mesa-glx for OpenGL support
+          go mod tidy
 
       # Step to build the Go application (will generate the `dist` directory)
       - name: Build the game
         run: |
           mkdir -p dist   # Create the dist directory if it does not exist
-          go build -o dist/pong-game main.go # Corrected path since the working directory is set
-
+          go build -o dist/pong-game main.go # Build output in `dist/`
+        
       # Step to publish the build to Itch.io
       - name: Publish to Itch.io
-        uses: manleydev/butler-publish-itchio-action@master
+        uses: manleydev/butler-publish-itchio-action@v1.0.3
         env:
           BUTLER_CREDENTIALS: ${{ secrets.ITCHIO_API_KEY }}
           CHANNEL: HTML           # Change to your required channel
