--- a/.github/workflows/Itchio-deploy.yml
+++ b/.github/workflows/Itchio-deploy.yml
@@ -27,20 +27,23 @@ jobs:
         with:
           go-version: 1.23.4  # Ensure this is the version your project needs
 
-      # Step to install dependencies for Go and system libraries
-      - name: Install dependencies
+      # Step to install dependencies for Go
+      - name: Install Go dependencies
+        run: go mod tidy
+
+      # Install necessary system dependencies for running Go games with Ebiten
+      - name: Install system dependencies for Go game
         run: |
           sudo apt-get update
-          sudo apt-get install -y libxrandr-dev libx11-dev libgl1-mesa-glx # Added libgl1-mesa-glx for OpenGL support
-          go mod tidy
+          sudo apt-get install -y libxrandr-dev libx11-dev libglu1-mesa libglfw3 libglfw3-dev  # alternative libraries
 
-      # Step to build the Go application (will generate the `dist` directory)
+      # Step to build the Go application (game)
       - name: Build the game
         run: |
-          mkdir -p dist   # Create the dist directory if it does not exist
-          go build -o dist/pong-game main.go # Build output in `dist/`
-        
-      # Step to publish the build to Itch.io
+          mkdir -p dist   # Create the dist directory if it doesn't exist
+          go build -o dist/pong-game main.go  # Build the Go application in dist/
+
+      # Step to publish to Itch.io
       - name: Publish to Itch.io
         uses: manleydev/butler-publish-itchio-action@v1.0.3
         env:
