--- a/.github/workflows/Itchio-deploy.yml
+++ b/.github/workflows/Itchio-deploy.yml
@@ -27,25 +27,35 @@ jobs:
         with:
           go-version: 1.23.4  # Ensure this is the version your project needs
 
-      # Step to install dependencies for Go
+      # Step to install Go dependencies
       - name: Install Go dependencies
         run: go mod tidy
 
-      # Install necessary system dependencies for running Go games with Ebiten
-      - name: Install system dependencies for Go game
+      # Step to install necessary system libraries
+      - name: Install system dependencies
         run: |
           sudo apt-get update
-          sudo apt-get install -y libxrandr-dev libx11-dev libglu1-mesa libglfw3 libglfw3-dev  # alternative libraries
+          sudo apt-get install -y \
+            libxrandr-dev \
+            libx11-dev \
+            libglu1-mesa \
+            libglfw3 \
+            libxcursor-dev \
+            libxcursor-dev \
+            libasound2-dev \
+            pkg-config \
+            libxpm-dev \
+            libxext-dev
 
-      # Step to build the Go application (game)
+      # Step to build the game in the dist directory
       - name: Build the game
         run: |
-          mkdir -p dist   # Create the dist directory if it doesn't exist
+          mkdir -p dist  # Create the dist directory if it does not exist
           go build -o dist/pong-game main.go  # Build the Go application in dist/
 
       # Step to publish to Itch.io
       - name: Publish to Itch.io
-        uses: manleydev/butler-publish-itchio-action@v1.0.3
+        uses: manleydev/butler-publish-itchio-action@master
         env:
           BUTLER_CREDENTIALS: ${{ secrets.ITCHIO_API_KEY }}
           CHANNEL: HTML           # Change to your required channel
