--- a/.github/workflows/Itchio-deploy.yml
+++ b/.github/workflows/Itchio-deploy.yml
@@ -1,4 +1,4 @@
-name: ItchIo deploy workflow
+name: ItchIo Deploy Workflow (WASM)
 
 on:
   pull_request:
@@ -25,40 +25,23 @@ jobs:
       - name: Setup Go
         uses: actions/setup-go@v4
         with:
-          go-version: 1.23.4  # Ensure this is the version your project needs
+          go-version: 1.23.4
 
       # Step to install Go dependencies
       - name: Install Go dependencies
         run: go mod tidy
 
-      # Step to install necessary system libraries
-      - name: Install system dependencies
+      # Step to build the Go application as WebAssembly
+      - name: Build the game for WebAssembly (WASM)
         run: |
-          sudo apt-get update
-          sudo apt-get install -y \
-            libxrandr-dev \
-            libx11-dev \
-            libglu1-mesa \
-            libglfw3 \
-            libxcursor-dev \
-            libxcursor-dev \
-            libasound2-dev \
-            pkg-config \
-            libxpm-dev \
-            libxext-dev
+          GOOS=js GOARCH=wasm go build -o dist/pong-game.wasm PongGame/multiplayer/main.go
 
-      # Step to build the game in the dist directory
-      - name: Build the game
-        run: |
-          mkdir -p dist  # Create the dist directory if it does not exist
-          go build -o dist/pong-game main.go  # Build the Go application in dist/
-
-      # Step to publish to Itch.io
-      - name: Publish to Itch.io
-        uses: manleydev/butler-publish-itchio-action@master
+      # Step to publish to Itch.io as a web game (WASM)
+      - name: Publish to Itch.io (WASM)
+        uses: manleydev/butler-publish-itchio-action@v1.0.3
         env:
           BUTLER_CREDENTIALS: ${{ secrets.ITCHIO_API_KEY }}
-          CHANNEL: HTML           # Change to your required channel
-          ITCH_GAME: pong-game    # Your Itch.io game name
-          ITCH_USER: thisismemukul     # Replace with your Itch.io username
-          PACKAGE: PongGame/multiplayer/dist  # The dist folder to be published
+          CHANNEL: html          # Set up for Web/HTML
+          ITCH_GAME: pong-game   # Your game name on Itch.io
+          ITCH_USER: thisismemukul    # Your Itch.io username
+          PACKAGE: PongGame/multiplayer/dist
